--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
 	ext {
-		springBootVersion = '1.4.1.RELEASE'
+		springBootVersion = '1.4.0.RELEASE'
 	}
 	repositories {
 		maven {
@@ -34,7 +34,8 @@ dependencies {
 	compile 'org.springframework.cloud:spring-cloud-starter-eureka',
 			'org.springframework.boot:spring-boot-starter-web',
 			'org.springframework.cloud:spring-cloud-starter-hystrix',
-            'org.springframework.cloud:spring-cloud-starter-zuul'
+			'org.springframework.cloud:spring-cloud-starter-config',
+			'org.springframework.cloud:spring-cloud-starter-zuul'
 
 	testCompile 'org.springframework.boot:spring-boot-starter-test'
 }
