--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,8 +9,8 @@
 #    serviceUrl:
 #      defaultZone: ${EUREKA_SERVER_URL:http://localhost:8761/eureka/}
 #
-#zuul:
-#  routes:
-#    user-center: /orders/**
-#    order-center: /users/**
+zuul:
+  routes:
+    user-center: /orders/**
+    order-center: /users/**
 
