--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -7,7 +7,7 @@ spring:
 
 eureka:
   instance:
-    hostname: eureka.leeln.com
+    hostname: api.leeln.com
     nonSecurePort: 80
   client:
     serviceUrl:
